--- a/changgou/changgou-service/changgou-service-pay/src/main/resources/application.yml
+++ b/changgou/changgou-service/changgou-service-pay/src/main/resources/application.yml
@@ -45,9 +45,12 @@ mq:
   pay:
     exchange:
       order: exchange.order
+      seckillorder: exchange.seckillorder
     queue:
       order: queue.order
+      seckillorder: queue.seckillorder
     routing:
       key: queue.order
+      seckillkey: queue.seckillorder
 
 
