--- a/changgou/changgou-service/changgou-service-seckill/pom.xml
+++ b/changgou/changgou-service/changgou-service-seckill/pom.xml
@@ -29,5 +29,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <!--加入ampq-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
     </dependencies>
 </project>
