--- a/changgou/changgou-service/changgou-service-seckill/src/main/resources/application.yml
+++ b/changgou/changgou-service/changgou-service-seckill/src/main/resources/application.yml
@@ -51,3 +51,7 @@ SeckillOrderQueue: SeckillOrderQueue
 UserQueueStatus: UserQueueStatus
 
 SeckillGoodsCountList: SeckillGoodsCountList_
+
+SeckillGoods: SeckillGoods_
+
+SeckillOrder: SeckillOrder
